--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,12 @@
   padding: 0;
   height: 100vh;
   width: 100vw;
-  background-color: #61dafb;
+  
 }
 
 /* Content wrapper */
 .content-wrapper {
-  margin-top: 60px; /* Adjust for navbar height */
-  padding: 20px;
+
   flex-grow: 1;
   overflow-y: auto;
 }
@@ -35,7 +34,7 @@
     font-size: 14px;
   }
 
-  .content-wrapper {
+  /* .content-wrapper {
     padding: 10px;
-  }
+  } */
 }
