--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,12 @@
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   
 }
 
 /* Content wrapper */
 .content-wrapper {
-
   flex-grow: 1;
   overflow-y: auto;
 }
