--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -8,8 +8,8 @@
   /* Navbar Container */
   .navbar {
     position: fixed;
-    background-color: #333;
-    color: white;
+    /* background-color: #ffffff00;
+    color: rgb(255, 0, 0); */
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -22,16 +22,16 @@
     justify-content: space-between;
     align-items: center;
     max-width: 100%;
-    /* margin: 0 auto; */
     padding: 1rem;
   }
   
   /* Logo Styling */
   .navbar-logo a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 1.5rem;
     font-weight: bold;
+    
   }
   
   /* Navigation Menu */
@@ -45,7 +45,7 @@
   }
   
   .nav-link {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     transition: color 0.3s ease;
     padding: 0.5rem 1rem;
@@ -72,7 +72,7 @@
   .menu-toggle span {
     height: 3px;
     width: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     margin-bottom: 5px;
     transition: all 0.3s ease;
   }
@@ -97,7 +97,7 @@
       top: 100%;
       left: 0;
       width: 100%;
-      background-color: #333;
+      background-color: #ffffff;
       flex-direction: column;
       padding: 1rem;
     }
