--- a/src/pages/About/AboutPage.css
+++ b/src/pages/About/AboutPage.css
@@ -16,13 +16,22 @@
 }
 
 .about-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   margin-bottom: 30px;
+  /*  */
+  background-image: url("../../assets/images/LeeJuhno/lee8.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 30px;
+  height: 50vh;
 }
 
 .about-header h1 {
   font-size: 2.5em;
-  color: var(--accent-color);
+  color: #fff;
 }
 
 .about-header p {
@@ -42,13 +51,12 @@
   padding: 20px;
 }
 
-.section-content.reverse {
-  flex-direction: column-reverse;
-}
 
 .section-text {
+  padding: 10px 30px;
   max-width: 800px;
   margin-bottom: 20px;
+  text-align: justify;
 }
 
 .section-image img {
