--- a/src/pages/Home/components/Header/HeroSection.css
+++ b/src/pages/Home/components/Header/HeroSection.css
@@ -1,9 +1,9 @@
-:root {
+/* :root {
   --background-color: #fdfefe;
-  --accent-color: #D4AF37;
-  --secondary-color: #7F8C8D;
-  --primary-color: #2C3E50;
-}
+  --accent-color: #000000;
+  --secondary-color: #000;
+  --primary-color: #000;
+} */
 
 /* Hero Container */
 
@@ -13,11 +13,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    /* background: linear-gradient(to right, #1e1e2e, #33334d); */
     min-height: 50vh;
     padding: 2rem;
-    box-sizing: border-box;
     gap: 3rem;
+
   }
   
   /* Content Section */
@@ -25,6 +24,8 @@
     flex: 1;
     animation: fadeInLeft 1s ease-in-out;
     /* max-width: 600px; */
+    text-align: left;
+
   }
   
   .hero-title {
@@ -32,16 +33,17 @@
     font-weight: bold;
     margin-bottom: 1rem;
     line-height: 1.2;
+    color: #000;
   }
   
   .highlight {
-    color: var(--primary-color);
+    color: #000;
   }
   
   .hero-subtitle {
     font-size: 1.2rem;
     margin-bottom: 2rem;
-    color: var(--secondary-color);
+    color: #000;
   }
   
   /* Buttons */
@@ -56,33 +58,33 @@
     color: #fff;
     font-weight: 600;
     border: none;
-    border-radius: 30px;
+    border-radius: 10px;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
   }
   
   .primary {
-    background-color: var(--accent-color);
+    background-color: #000;
   }
   
   .primary:hover {
-    background-color: var(--accent-color);
+    background-color: #000;
   }
   
   .secondary {
     background-color: transparent;
-    color: var(--accent-color);
-    border: 2px solid var(--accent-color);
+    color: #000;
+    border: 2px solid #000;
   }
   
   .secondary:hover {
-    background-color: var(--accent-color);
+    background-color: #000;
     color: #fff;
   }
   
   /* Image Section */
   .hero-image {
-    flex: 1;
+    flex: 2;
     display: flex;
     justify-content: center;
     animation: fadeInRight 1s ease-in-out;
@@ -90,8 +92,8 @@
   
   .hero-image img {
     max-width: 100%;
-    height: 20%;
-    border-radius: 15px;
+    height:30%;
+    border-radius: 10px;
     transition: transform 0.5s ease;
   }
   
@@ -108,6 +110,7 @@
   
     .hero-title {
       font-size: 2.5rem;
+      text-align: center;
     }
   
     .hero-buttons {
