--- a/src/pages/Home/components/MeetSection/MeetSection.css
+++ b/src/pages/Home/components/MeetSection/MeetSection.css
@@ -22,7 +22,7 @@
   }
   
   .meet-section h2 {
-    font-size: 24px;
+    font-size: 35px;
     color: var(--text-color-primary);
     margin-bottom: 16px;
   }
@@ -40,14 +40,16 @@
     gap: 15px;
   }
   
+  
   .mm-button {
-    padding: 10px 20px;
+    padding: 20px 50px;
     border: none;
     border-radius: 5px;
     background-color: var(--btn-bg-color);
     color: var(--btn-text-color);
     cursor: pointer;
-    font-size: 14px;
+    font-size: 20px;
+    font-weight: bold;
     transition: background-color 0.3s ease;
   }
   
